# sophrosyne

./: .deepsource.toml  .gitignore  .gitmodules  .golangci.yaml  .goreleaser.yaml  .mise.toml  .mockery.yaml  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  bruno.dockerfile  bruno.json  cache.go  checks.go  collection.bru  config.go  docker-compose.development.yml  docker-compose.yml  errors.go  go.mod  go.sum  logging.go  main.go  main_test.go  profiles.go  pyproject.toml  renovate.json  scans.go  something.go  sonar-project.properties  users.go
.github/workflows/: codegen_check.yaml  deepsource.yaml  endorlabs.yaml  integration-test.yaml  osv-scanner-pr.yaml  osv-scanner-schedule.yaml  osv-scanner.yaml  release.yaml  scorecard.yaml  semgrep.yml  snyk.yaml  sonarcloud.yaml  update-cache.yaml
.mise/tasks/: clean  sync-go-version
cmd/dummycheck/: main.go
cmd/other/: main.go
cmd/sophrosyne/: grpc.go  main.go
configurations/: dev-otel-collector-config.yaml  dev.yaml  integration.yaml
docs/: ccla.txt  docs.md  icla.txt  index.md  security.md
environments/: local.bru
internal/cache/: cache.go  cache_test.go  checkservice.go  checkservice_test.go  docs.go  profileservice.go  profileservice_test.go  setup_test.go  userservice.go  userservice_test.go
internal/cedar/: cedar.go  cedarschema.json  policies.cedar
internal/configProvider/: config.go  config_test.go
internal/grpc/: CheckServiceServer_GetCheck_test.go  CheckServiceServer_GetChecks_test.go  NewScanServiceServer_test.go  NewServer_test.go  ProfileServiceServer_GetProfiles_test.go  ProfileServiceServer_ProfileCheck_test.go  ScanServiceServer_Scan_test.go  ScanServiceServer_lookupProfile_test.go  ScanServiceServer_performScan_test.go  Server_GetServiceInfo_test.go  Server_GracefulStop_test.go  Server_RegisterService_test.go  Server_Serve_test.go  WithAuthorizationProvider_test.go  WithCheckService_test.go  WithConfig_test.go  WithGrpcServer_test.go  WithListener_test.go  WithLogger_test.go  WithOptions_test.go  WithProfileService_test.go  WithUserService_test.go  WithValidator_test.go  checkProviderRequestFromScanRequest_test.go  checkservice.go  defaultScanServiceServerOptions_test.go  defaultServerOptions_test.go  doCheck_test.go  options.go  profileservice.go  (+7 more)
migrations/: env.py
(+214 files in other folders)
